# polar-streams

./: .gitignore  Makefile  README.md  pyproject.toml  test.py
polar_streams/: config.py  dataframe.py  model.py  polars.py  sink.py  source.py  statestore.py  util.py
tests/: test_dataframe.py  test_model.py  test_source.py  test_statestore.py
