[project]
name = "polar-streams"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
packages = [
    "polar_streams",
]
dependencies = [
    "adbc-driver-sqlite>=1.4.0",
    "polars>=1.21.0",
    "pyarrow>=19.0.0",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
]
